# tender-formatter

./: PROGRESS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: .gitkeep
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  debug.rs  document.rs  format.rs  mod.rs  template.rs
src-tauri/src/models/: debug.rs  format.rs  mod.rs
src-tauri/src/security/: audit.rs  desensitize.rs  mod.rs
src-tauri/src/services/: diff_engine.rs  docx_editor.rs  format_extractor.rs  llm_client.rs  logger.rs  mod.rs
src/router/: index.ts
src/stores/: format.ts  settings.ts
src/styles/: main.css
src/views/: About.vue  FormatConfirm.vue  Home.vue  Preview.vue  Settings.vue  Templates.vue
tests/reports/: bug-report-2026-03-15.json  test-report-2026-03-15.md
